--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "conference-app",
   "version": "1.0.0",
-  "private": true,
+  "private": "true",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -19,5 +19,8 @@
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
